roots/demo/ansible/files/black.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: black
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
   - hosts:
     - black.do.iot4.net
     secretName: black-cert
  rules:
  - host: "black.do.iot4.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: black
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: black
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: black
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: black
spec:
  selector:
    matchLabels:
      app: black
  replicas: 2
  template:
    metadata:
      labels:
        app: black
    spec:
      containers:
      - name: black
        image: registry.digitalocean.com/do/black:12a79b8
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registry-do
