roots/demo/ansible/files/elk.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
spec:
 ingressClassName: "nginx"
 rules:
 - host: "kibana.do.iot4.net"
   http:
     paths:
     - pathType: Prefix
       path: /
       backend:
         service:
           name: elk-kb-http
           port:
             number: 5601
